# talgo

./: .env.example  .gitignore  README.md
.github/workflows/: core.yml  oxide_wave.yml  sub_sweeper.yml
crates/core/: Cargo.toml
crates/core/src/: main.rs  schema.rs
crates/core/src/routes/: user.rs
crates/core/src/routes/contest/: mod.rs  submit.rs
crates/core/src/types/: mod.rs  user.rs
crates/data_dust/: Cargo.toml  diesel.toml
crates/data_dust/migrations/2024-08-30-202638_users_table/: up.sql
crates/data_dust/migrations/2024-08-30-202640_contest_table/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-202730_users_bio/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-203126_problems_table/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-203233_submission_table/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-203338_contest_table/: up.sql
crates/data_dust/migrations/2024-08-30-203441_user_problems_table/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-203559_check/: down.sql  up.sql
crates/data_dust/migrations/2024-08-30-203754_making_notes_optional/: down.sql  (+1 more)
crates/data_dust/src/: lib.rs  models.rs  schema.rs
crates/oxide_wave/: Cargo.toml
crates/oxide_wave/src/: main.rs
crates/oxide_wave/src/utils/: mod.rs
crates/sub_sweeper/: Cargo.toml
crates/sub_sweeper/src/: main.rs  process.rs  socket.rs  worker.rs
docker/core/: Dockerfile
docker/oxide_wave/: Dockerfile
docker/services/: docker-compose.yml
docker/sub_sweeper/: Dockerfile
statics/: talgo_user_design.excalidraw  talk.md
(+25 files in other folders)
