[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
data_dust = { path = "../data_dust" }
actix = "0.13.5"
actix-web = "4.9.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.209"
serde_json = "1.0.127"
dotenv = "0.15.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
uuid = "1.10.0"
chrono = "0.4.38"
