[package]
name = "oxide_wave"
version = "0.1.0"
edition = "2021"

[dependencies]
data_dust = { path = "../data_dust" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
futures-util = "0.3"
redis = { version = "0.27.2", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
